# gee_s1s2_translator

./: .env.example  .gitignore  LICENSE  OPERATIONAL_DEPLOYMENT.md  README.md  pyproject.toml
config/: operational_v1.yaml
dissertation_figures/: README.md
dissertation_figures/render/fig1/: brentmoor_footprint.json  fetch_s2_truth.py  render_fig1.py
dissertation_figures/render/fig2/: render_fig2.py
dissertation_figures/render/fig3/: render_fig3.py
dissertation_figures/render/fig4/: render_fig4.py
dissertation_figures/render/fig5/: mt_inference_cavenham.py  render_fig5.py
docs/: architecture_overview.md  calibration_methodology.md  cost_monitoring.md  methodology_divergences.md
notebooks/: 01_harvest_walkthrough.ipynb
scripts/: submit_post_fire_harvest.py  submit_predict_aois.py  submit_vertex_evaluate.py  submit_vertex_phase_b.py  submit_vertex_phase_b_v2.py  submit_vertex_phase_c.py  submit_vertex_training.py
src/gee_s1s2/: __init__.py  aois.py  auth.py  calibration.py  catalogue.py  cli.py  config.py  export.py  filtering.py  harvest.py  manifest.py  multitemporal_harvest.py  pairing.py  run_post_fire_harvest.py  sampling.py  state.py  validation.py
tests/: test_aois.py  test_calibration.py  test_export.py  test_pairing.py  test_state.py
training/: EXPERIMENTAL_SUMMARY.md  MANIFEST.in  README.md  WORKED_EXAMPLE_BERWYN.md  WORKED_EXAMPLE_CAVENHAM.md  phase_bcm_comparison.md  setup.py  v2_reference_results.json
training/calibration_v4_work/: fit_v4_mlp.py
training/calibration_v4_work/results/: loso_results.json
training/notebooks/: 02_unet_training.ipynb
training/src/training/: __init__.py  data.py  deploy_endpoint.py  evaluate_run.py  linear_baseline.py  losses.py  metrics.py  model.py  predict_aois.py  train_unet.py  trainer.py
training/src/training/calibration/: postfit_affine_v1.json  postfit_affine_v3.json
training/tests/: test_data.py  test_model.py
