[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gee-s1s2-translator"
version = "0.1.0"
description = "Sentinel-1 to Sentinel-2 translation for lowland heath fire mapping, ported from the v2 PyTorch+MPC pipeline to Google Earth Engine and GCS for operational deployment."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Sonia Lasocki" },
    { name = "Marcus Sorensen" },
]
keywords = [
    "sentinel-1",
    "sentinel-2",
    "google-earth-engine",
    "remote-sensing",
    "wildfire",
    "lowland-heath",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "earthengine-api>=1.5",
    "google-cloud-storage>=2.18",
    "google-auth>=2.30",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "pandas>=2.1",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "tensorflow>=2.16; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "tqdm>=4.66",
    "requests>=2.31",
    # MPC client retained as the calibration-validation reference
    "pystac-client>=0.7",
    "planetary-computer>=1.0",
    "odc-stac>=0.3.10",
    "xarray>=2024.1",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
    "folium>=0.15",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.3",
]
# When tensorflow cannot install on Apple x86_64 (legacy Intel macs), use this
# fallback for TFRecord IO. Vertex AI training and Colab both have full TF.
tfrecord-light = [
    "crc32c>=2.5",
]

[project.scripts]
gee_s1s2 = "gee_s1s2.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gee_s1s2"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that hit GEE or GCS; require credentials and are skipped by default",
]
